--- a/Chess/app/build.gradle
+++ b/Chess/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     //noinspection GradleCompatible
     implementation 'com.android.support:cardview-v7:28.0.0'
 
+
+    //coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2'
 }
