--- a/Chess/app/build.gradle
+++ b/Chess/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    // Optional -- Mockito framework
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+
 
     // design
     //noinspection GradleCompatible
